--- a/vue/css/style.css
+++ b/vue/css/style.css
@@ -19,8 +19,8 @@ Version: 1.0
 
 
 /*=========1. google fonts Import=========*/
-@import url("https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy");
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600");
+/*@import url("https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy");*/
+/*@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,600");*/
 
 /*========= 2. default Style=========*/
 body {
