--- a/vue/css/self.css
+++ b/vue/css/self.css
@@ -1,10 +1,10 @@
 .test {
-    width   : 500px;
+    width   : auto;
     height  : 260px;
     overflow: auto;
     float   : left;
     margin  : 0px;
-    border  : none;
+    border : none;
 }
 .scrollbar {
     width : 30px;
